<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/statistic_bg"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvStatistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/app_icon_switch"
        android:drawablePadding="2dp"
        android:text="@string/app_statistic"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tlStatistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tvStatistic"
        tools:visibility="visible">

        <TableRow >

            <TextView
                android:id="@+id/tvEncodeDimensions"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="3dp"
                tools:text="@string/app_statistic_dimensions" />
        </TableRow>

        <TableRow >

            <TextView
                android:id="@+id/tvEncodeFrameRate"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="3dp"
                tools:text="@string/app_statistic_frame_rate" />
        </TableRow>

        <TableRow >

            <TextView
                android:id="@+id/tvEncodeBitrate"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="3dp"
                tools:text="@string/app_statistic_bitrate" />
        </TableRow>

        <TableRow >

            <TextView
                android:id="@+id/tvLocalUid"
                android:layout_weight="1"
                android:paddingVertical="3dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/app_local_uid" />
        </TableRow>

        <TableRow >

            <TextView
                android:id="@+id/tvPkChannels"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:paddingVertical="3dp"
                tools:text="@string/app_pk_channels" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>